# recfmm

./: meson.build  meson_build_instructions.md  meson_options.txt
include/: cilk.h
src/: fmm-action.c
test/: fmm-test.c
